--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="" id="position">
-    
-    
-  </div>
+
+  <canvas></canvas>
+  
 </body>
 </html>
